tests/baselines/reference/staticIndexSignature3.errors.txt
tests/cases/conformance/classes/staticIndexSignature/staticIndexSignature3.ts(21,11): error TS7053: Element implicitly has an 'any' type because expression of type '"f"' can't be used to index type 'typeof D'.
  Property 'f' does not exist on type 'typeof D'.
tests/cases/conformance/classes/staticIndexSignature/staticIndexSignature3.ts(22,11): error TS7053: Element implicitly has an 'any' type because expression of type '42' can't be used to index type 'typeof D'.
  Property '42' does not exist on type 'typeof D'.
tests/cases/conformance/classes/staticIndexSignature/staticIndexSignature3.ts(23,11): error TS7053: Element implicitly has an 'any' type because expression of type '"f"' can't be used to index type 'typeof ED'.
  Property 'f' does not exist on type 'typeof ED'.
tests/cases/conformance/classes/staticIndexSignature/staticIndexSignature3.ts(24,11): error TS7053: Element implicitly has an 'any' type because expression of type '42' can't be used to index type 'typeof ED'.
  Property '42' does not exist on type 'typeof ED'.
tests/cases/conformance/classes/staticIndexSignature/staticIndexSignature3.ts(25,11): error TS7053: Element implicitly has an 'any' type because expression of type '"f"' can't be used to index type 'typeof DD'.
  Property 'f' does not exist on type 'typeof DD'.
tests/cases/conformance/classes/staticIndexSignature/staticIndexSignature3.ts(26,11): error TS7053: Element implicitly has an 'any' type because expression of type '42' can't be used to index type 'typeof DD'.
  Property '42' does not exist on type 'typeof DD'.


==== tests/cases/conformance/classes/staticIndexSignature/staticIndexSignature3.ts (6 errors) ====
    class B {
        static readonly [s: string]: number;
        static readonly [s: number]: 42 | 233
    }
    
    class D extends B {
        static readonly [s: string]: number
    }
    
    class ED extends D {
        static readonly [s: string]: boolean
        static readonly [s: number]: 1 
    }
    
    class DD extends D {
        static readonly [s: string]: 421
    }
    
    const a = B["f"];
    const b =  B[42];
    const c = D["f"]
              ~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"f"' can't be used to index type 'typeof D'.
!!! error TS7053:   Property 'f' does not exist on type 'typeof D'.
    const d = D[42]
              ~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '42' can't be used to index type 'typeof D'.
!!! error TS7053:   Property '42' does not exist on type 'typeof D'.
    const e = ED["f"]
              ~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"f"' can't be used to index type 'typeof ED'.
!!! error TS7053:   Property 'f' does not exist on type 'typeof ED'.
    const f = ED[42]
              ~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '42' can't be used to index type 'typeof ED'.
!!! error TS7053:   Property '42' does not exist on type 'typeof ED'.
    const g = DD["f"]
              ~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"f"' can't be used to index type 'typeof DD'.
!!! error TS7053:   Property 'f' does not exist on type 'typeof DD'.
    const h = DD[42]
              ~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '42' can't be used to index type 'typeof DD'.
!!! error TS7053:   Property '42' does not exist on type 'typeof DD'.
    